--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@google-cloud/storage": "^5.15.3",
     "@grpc/proto-loader": "^0.1.0",
+    "axios": "^0.24.0",
     "dotenv": "^8.6.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
